Update stylesheet with proper tags

--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>TerminusX</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="icon" type="image/png" href="https://assets.terminusdb.com/images/terminusx-color.png"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
+    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
     <style>
       .leaflet-container {
         height: 400px;
@@ -34,7 +34,7 @@
       }
     </script>
      </body>
-    <link rel="stylesheet" href="/assets/App.css">
-    <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/Colors.css">
+    <link type="text/css" href="/assets/App.css">
+    <link href="https://bootswatch.com/5/darkly/bootstrap.css" type="text/css" crossorigin="anonymous">
+    <link type="text/css" href="/assets/Colors.css">
 </html>
