--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -13,9 +13,6 @@
         margin: 0 auto;
       }
     </style>
-    <link type="text/css" href="/assets/App.css">
-    <link href="https://bootswatch.com/5/darkly/bootstrap.css" type="text/css" crossorigin="anonymous">
-    <link type="text/css" href="/assets/Colors.css">
   </head>
   <body>
     <div id="root" class="h-100">
@@ -36,5 +33,9 @@
         })
       }
     </script>
+        <!-- do not move from here this css have to override the css called inside the js fiile-->
+        <link href="/assets/App.css" rel="stylesheet">
+        <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
+        <link href="/assets/Colors.css" rel="stylesheet">
      </body>
 </html>
