--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -33,5 +33,8 @@
         })
       }
     </script>
+     <link href="/assets/App.css" rel="stylesheet">
+     <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
+     <link href="/assets/Colors.css" rel="stylesheet">
      </body>
 </html>
