--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="icon" type="image/png" href="https://assets.terminusdb.com/images/terminusx-color.png"/>
-    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"/>
-    <style>
-      .leaflet-container {
-        height: 400px;
-        width: 80%;
-        margin: 0 auto;
-      }
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
+		<style>
+			h1, h2, p {
+			text-align: center;
+			}
+			.leaflet-container {
+				height: 400px;
+				width: 80%;
+				margin: 0 auto;
+			}
+			.leaflet-popup-content {
+				color: #000;
+			}
+		</style>
     </style>
   </head>
   <body>
