add change requestes and diff view

--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://unpkg.com/graphiql/graphiql.min.css">
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="icon" type="image/png" href="https://assets.terminusdb.com/images/terminusx-color.png"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
