--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -44,5 +44,25 @@
      <link href="/assets/App.css" rel="stylesheet">
      <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
      <link href="/assets/Colors.css" rel="stylesheet">
+     <style>
+      .MuiButton-contained {
+        background-color: #a9a7a5;
+      }
+      .MuiButton-containedPrimary {
+        color: #fff;
+        background-color: #3f51b5;
+      }
+      .MuiButton-containedSecondary {
+        color: #fff;
+        background-color: #f50057;
+      }
+      
+      .rule_group{
+        background-color: white;
+      }
+      .result-window .CodeMirror{
+          height: 100%;
+      }
+    </style>
      </body>
 </html>
