review advanced-search packages

--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -38,10 +38,10 @@
         })
       }
     </script>
-     <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
-     <link href="/assets/Colors.css" rel="stylesheet">
+    <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
+     <link href="/assets/Colors.css" rel="stylesheet"> 
      <style>
-      .MuiButton-contained {
+   /*   .MuiButton-contained {
         background-color: #a9a7a5;
       }
       .MuiButton-containedPrimary {
@@ -54,7 +54,7 @@
       }
       .rule_group{
         background-color: white;
-      }
+      }*/
     </style>
      </body>
 </html>
