--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -14,7 +14,7 @@
     <div id="root" class="h-100">
     </div>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-625355122"></script>
+   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-625355122"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -28,7 +28,7 @@
           gtag('event', 'conversion', {'send_to': 'AW-625355122/pmA5CIjRqfsCEPLSmKoC'});
         })
       }
-    </script>
+    </script>-->
     <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
      <link href="/assets/Colors.css" rel="stylesheet"> 
      <style>
