--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -14,7 +14,7 @@
     <div id="root" class="h-100">
     </div>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-625355122"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-625355122"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -28,24 +28,8 @@
           gtag('event', 'conversion', {'send_to': 'AW-625355122/pmA5CIjRqfsCEPLSmKoC'});
         })
       }
-    </script>
+    </script>-->
     <link href="https://bootswatch.com/5/darkly/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
      <link href="/assets/Colors.css" rel="stylesheet"> 
-     <style>
-   /*   .MuiButton-contained {
-        background-color: #a9a7a5;
-      }
-      .MuiButton-containedPrimary {
-        color: #fff;
-        background-color: #3f51b5;
-      }
-      .MuiButton-containedSecondary {
-        color: #fff;
-        background-color: #f50057;
-      }
-      .rule_group{
-        background-color: white;
-      }*/
-    </style>
      </body>
 </html>
