--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -3,8 +3,6 @@
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta charset="UTF-8">
-    <link href="/assets/graphiql.min.css" rel="stylesheet"> 
-   
     <!-- <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     -->
       <link rel="icon" type="image/png" href="https://assets.terminusdb.com/images/terminusx-color.png"/>
@@ -13,7 +11,7 @@
     <link href='/assets/leaflet.fullscreenv1.0.1.css' rel='stylesheet' />
     </style>
   </head>
-  <body>
+  <body class="graphiql-dark">
     <div id="root" class="h-100">
     </div>
     <style>
