--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -11,7 +11,7 @@
     <link href='/assets/leaflet.fullscreenv1.0.1.css' rel='stylesheet' />
     </style>
   </head>
-  <body class="graphiql-dark">
+  <body>
     <div id="root" class="h-100">
     </div>
     <style>
