fix change request new

--- a/packages/tdb-dashboard/src/index.html
+++ b/packages/tdb-dashboard/src/index.html
@@ -7,8 +7,8 @@
     -->
       <link rel="icon" type="image/png" href="https://assets.terminusdb.com/images/terminusx-color.png"/>
     <!--<link rel="stylesheet" src="https://unpkg.com/react-sidebar-ui@1.2.0/dist/index.css"/>-->
-		<script src='/assets/leaflet.fullscreenv1.0.1.min.js'></script>
-    <link href='/assets/leaflet.fullscreenv1.0.1.css' rel='stylesheet' />
+	<!--	<script src='/assets/leaflet.fullscreenv1.0.1.min.js'></script>
+    <link href='/assets/leaflet.fullscreenv1.0.1.css' rel='stylesheet' /> -->
     </style>
   </head>
   <body>
